Fix U2F not showing on selection of multifactor devices.  Improve fonts

--- a/ui/apps/io.ox/multifactor/style.less
+++ b/ui/apps/io.ox/multifactor/style.less
@@ -86,6 +86,14 @@
     color: #aaa;
 }
 
+.modal-body .multifactorText {
+    font-size: 1.5em;
+}
+
+.modal-body .multifactorIcon {
+    font-size: 1.5em;
+}
+
 .multifactorError {
     padding-top:20px;
     color: red;
